--- a/services/speciality/speciality-deployment.yaml
+++ b/services/speciality/speciality-deployment.yaml
@@ -3,16 +3,16 @@ kind: Deployment
 metadata:
   name: speciality-deployment
   labels:
-    app: speciality-service
+    app: speciality-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: speciality-service
+      app: speciality-app
   template:
     metadata:
       labels:
-        app: speciality-service
+        app: speciality-app
     spec:
       containers:
         - name: speciality-service
@@ -35,3 +35,19 @@ spec:
                 configMapKeyRef:
                   name: mongo-config
                   key: mongo-url
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: speciality-service
+spec:
+  type: NodePort
+  selector:
+    app: speciality-app
+  ports:
+    - protocol: TCP
+      port: 9443
+      targetPort: 9443
+      nodePort: 30100
