--- a/services/hospital/hospital-deployment.yaml
+++ b/services/hospital/hospital-deployment.yaml
@@ -1,39 +1,39 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: speciality-service
+  name: hospital-service
   namespace: medhead
 spec:
   selector:
-    app: speciality-app
+    app: hospital-app
   ports:
     - protocol: TCP
-      port: 9443
-      targetPort: 9443
-      # nodePort: 31800
+      port: 8000
+      targetPort: 8000
+      # nodePort: 31600
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: speciality-deployment
+  name: hospital-deployment
   namespace: medhead
   labels:
-    app: speciality-app
+    app: hospital-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: speciality-app
+      app: hospital-app
   template:
     metadata:
       labels:
-        app: speciality-app
+        app: hospital-app
     spec:
       containers:
-        - name: speciality-app
-          image: samirguemri/speciality-service:latest
+        - name: hospital-app
+          image: samirguemri/hospital-service:latest
           ports:
-            - containerPort: 9443
+            - containerPort: 8000
           env:
             - name: username
               valueFrom:
