update application's namespace

--- a/applications/medhead-ui-application.yaml
+++ b/applications/medhead-ui-application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: medhead-ui-application
-  namespace: medhead
+  namespace: argocd
 spec:
   project: default
   source:
