--- a/applications/mongodb-express-application.yaml
+++ b/applications/mongodb-express-application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: mongo-express-application
-  namespace: medhead
+  namespace: argocd
 spec:
   project: default
   source:
