--- a/applications/speciality-application.yaml
+++ b/applications/speciality-application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: speciality-application
-  namespace: medhead
+  namespace: argocd
 spec:
   project: default
   source:
