--- a/setup/mongo-express/deployment.yaml
+++ b/setup/mongo-express/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mongodb-express-service
   namespace: medhead
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: mongodb-express-app
   ports:
