--- a/setup/mongo-express/deployment.yaml
+++ b/setup/mongo-express/deployment.yaml
@@ -37,17 +37,8 @@ spec:
             - containerPort: 8081
           env:
             - name: ME_CONFIG_MONGODB_ADMINUSERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: mongo-secret
-                  key: mongo-user
+              value: rootuser
             - name: ME_CONFIG_MONGODB_ADMINPASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mongo-secret
-                  key: mongo-password
+              value: rootpass
             - name: ME_CONFIG_MONGODB_SERVER
-              valueFrom:
-                configMapKeyRef:
-                  name: mongo-config
-                  key: mongo-url
+              value: mongodb-service
