--- a/setup/mongo/statefulset.yaml
+++ b/setup/mongo/statefulset.yaml
@@ -31,14 +31,19 @@ spec:
           image: mongo:latest
           ports:
             - containerPort: 27017
+          env:
+            - name: MONGO_INITDB_ROOT_USERNAME
+              value: rootuser
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              value: rootpass
           volumeMounts:
-          - name: data
-            mountPath: /data/db
+            - name: data
+              mountPath: /data/db
   volumeClaimTemplates:
-  - metadata:
-      name: data
-    spec:
-      accessModes: ["ReadWriteOnce"]
-      resources:
-        requests:
-          storage: 1Gi
+    - metadata:
+        name: data
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 1Gi
