--- a/setup/mongo/statefulset.yaml
+++ b/setup/mongo/statefulset.yaml
@@ -12,7 +12,7 @@ spec:
       targetPort: 27017
 ---
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: mongodb-statefulset
 spec:
