--- a/setup/mongo/deployment.yaml
+++ b/setup/mongo/deployment.yaml
@@ -15,6 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongodb-deployment #statefulset
+  namespace: medhead
 spec:
   selector:
     matchLabels:
