--- a/services/destination/destination-deployment.yaml
+++ b/services/destination/destination-deployment.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: destination-service
+  name: destination
   namespace: medhead
 spec:
   selector:
-    app: destination-app
+    app: destination
   ports:
     - protocol: TCP
       port: 8443
@@ -15,22 +15,22 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: destination-deployment
+  name: destination
   namespace: medhead
   labels:
-    app: destination-app
+    app: destination
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: destination-app
+      app: destination
   template:
     metadata:
       labels:
-        app: destination-app
+        app: destination
     spec:
       containers:
-        - name: destination-app
+        - name: destination
           image: samirguemri/destination-service:latest
           ports:
             - containerPort: 9443
