--- a/services/notification/notification-deployment.yaml
+++ b/services/notification/notification-deployment.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: notification-service
+  name: notification
   namespace: medhead
 spec:
   selector:
-    app: notification-app
+    app: notification
   ports:
     - protocol: TCP
       port: 8090
@@ -15,22 +15,22 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: notification-deployment
+  name: notification
   namespace: medhead
   labels:
-    app: notification-app
+    app: notification
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: notification-app
+      app: notification
   template:
     metadata:
       labels:
-        app: notification-app
+        app: notification
     spec:
       containers:
-        - name: notification-app
+        - name: notification
           image: samirguemri/notification-service:latest
           ports:
             - containerPort: 8090
