--- a/services/speciality/speciality-deployment.yaml
+++ b/services/speciality/speciality-deployment.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: speciality-service
+  name: speciality
   namespace: medhead
 spec:
   type: NodePort
   selector:
-    app: speciality-app
+    app: speciality
   ports:
     - protocol: TCP
       port: 9443
@@ -16,23 +16,24 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: speciality-deployment
+  name: speciality
   namespace: medhead
   labels:
-    app: speciality-app
+    app: speciality
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: speciality-app
+      app: speciality
   template:
     metadata:
       labels:
-        app: speciality-app
+        app: speciality
     spec:
       containers:
-        - name: speciality-app
+        - name: speciality
           image: samirguemri/speciality-service:latest
+          # imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9443
           env:
