--- a/setup/mongodb/deployment.yaml
+++ b/setup/mongodb/deployment.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongodb-service
+  name: mongodb
   namespace: medhead
 spec:
   selector:
-    app: mongodb-app
+    app: mongodb
   ports:
     - protocol: TCP
       port: 27017
@@ -14,18 +14,17 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb-deployment #statefulset
+  name: mongodb
   namespace: medhead
 spec:
   selector:
     matchLabels:
-      app: mongodb-app
-  #serviceName: "mongodb-app"
+      app: mongodb
   replicas: 1
   template:
     metadata:
       labels:
-        app: mongodb-app
+        app: mongodb
     spec:
       containers:
         - name: mongodb
@@ -44,11 +43,11 @@ spec:
                   name: mongo-secret
                   key: mongo-password
             - name: ME_CONFIG_MONGODB_ENABLE_ADMIN
-              value: true
+              value: "true"
           volumeMounts:
-            - name: "mongo-data-dir"
+            - name: mongo-data-dir
               mountPath: /data/db
       volumes:
-        - name: "mongo-data-dir"
+        - name: mongo-data-dir
           persistentVolumeClaim:
-            claimName: "mongo-data"
+            claimName: mongo-data
