--- a/ui/medhead/medhead-ui-deployment.yaml
+++ b/ui/medhead/medhead-ui-deployment.yaml
@@ -1,37 +1,37 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: medhead-ui-deployment
-  namespace: medhead
-  labels:
-    app: medhead-ui-app
-spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: medhead-ui-app
-  template:
-    metadata:
-      labels:
-        app: medhead-ui-app
-    spec:
-      containers:
-        - name: medhead-ui-app
-          image: samirguemri/medhead-ui-app:latest
-          ports:
-            - containerPort: 3443
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: medhead-ui-service
+  name: medhead-ui
   namespace: medhead
 spec:
   type: NodePort
   selector:
-    app: medhead-ui-app
+    app: medhead-ui
   ports:
     - protocol: TCP
       port: 3443
       targetPort: 3443
       nodePort: 31900
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: medhead-ui
+  namespace: medhead
+  labels:
+    app: medhead-ui
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: medhead-ui
+  template:
+    metadata:
+      labels:
+        app: medhead-ui
+    spec:
+      containers:
+        - name: medhead-ui
+          image: samirguemri/medhead-ui-app:latest
+          ports:
+            - containerPort: 3443
